@@ -231,7 +231,7 @@ public class ClusteredStoreTest {
   @SuppressWarnings("unchecked")
   public void testGetTimeout() throws Exception {
     ServerStoreProxy proxy = mock(ServerStoreProxy.class);
-    long longKey = HashUtils.intHashToLong(new Long(1L).hashCode());
+    long longKey = HashUtils.intHashToLong(Long.valueOf(1L).hashCode());
     when(proxy.get(longKey)).thenThrow(TimeoutException.class);
     ClusteredStore<Long, String> store = new ClusteredStore<>(config,null, null, proxy, null, null, new DefaultStatisticsService());
     assertThat(store.get(1L), nullValue());
@@ -630,7 +630,7 @@ public class ClusteredStoreTest {
 
   @Test
   public void testSingleChainMultipleValues() throws StoreAccessException {
-    assertThat(Long.hashCode(1L), is(Long.hashCode(~1L)));
+    assertThat(Long.valueOf(1L).hashCode(), is(Long.valueOf(~1L).hashCode()));
 
     store.put(1L, "foo");
     store.put(~1L, "bar");
